k8s/apps/openclaw/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openclaw
  namespace: cwx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`openclaw.chenwx.top`)
      kind: Rule
      services:
        - name: openclaw
          namespace: cwx
          port: 80
